# sqlite3-amalgamation

./: CMakeLists.txt  README.md
cmake/: SQLite3Config.cmake.in  sqlite3.pc.in
